<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lista_ordenar"
        android:icon="@drawable/ic_organizar"
        android:title="@string/menu_ordenar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_todos"
                android:title="@string/menu_todos"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_tratamento"
                android:title="@string/menu_tratamento"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_quarentena"
                android:title="@string/menu_quarentena"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_liberado"
                android:title="@string/menu_liberado"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>